style: change access style
