# server/src/docs/swagger.yaml
@@ -2,7 +2,13 @@ openapi: 3.0.0
 info:
   title: Gachitda API
   version: 1.0.0
-
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+security:
+  - bearerAuth: []
 paths:
   /api/auth/email:
     post:
@@ -16,8 +22,6 @@ paths:
             schema:
               type: object
               properties:
-                accessToken:
-                  type: string
                 email:
                   type: string
                   format: email
@@ -68,8 +72,6 @@ paths:
             schema:
               type: object
               properties:
-                accessToken:
-                  type: string
                 code:
                   type: string
       responses:
@@ -129,8 +131,6 @@ paths:
             schema:
               type: object
               properties:
-                accessToken:
-                  type: string
                 subscription:
                   type: object
       responses:
@@ -161,8 +161,6 @@ paths:
             schema:
               type: object
               properties:
-                accessToken:
-                  type: string
                 text:
                   type: string
       responses:
@@ -181,20 +179,11 @@ paths:
                 invalid_access_token:
                   value:
                     error: INVALID_ACCESS_TOKEN
-  /api/user/me:
+  /api/user:
     get:
       tags:
         - User
       summary: 유저의 기본 정보
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                accessToken:
-                  type: string
       responses:
         '200':
           description: 기본 정보
@@ -226,21 +215,51 @@ paths:
                 invalid_access_token:
                   value:
                     error: INVALID_ACCESS_TOKEN
+  /api/user/{userId}:
+    get:
+      tags:
+        - User
+      summary: 특정 유저의 간단한 정보
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          description: 조회할 글의 postId
+          schema:
+            type: string
+      responses:
+        '200':
+          description: 기본 정보
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  nickname:
+                    type: string
+                  profileimage:
+                    type: string
+                  email:
+                    type: string
+        '401':
+          description: INVALID_ACCESS_TOKEN
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+              examples:
+                invalid_access_token:
+                  value:
+                    error: INVALID_ACCESS_TOKEN
   /api/user/posts:
     get:
       tags:
         - User
         - Post
       summary: 유저가 쓴/신청한 포스트 리스트
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                accessToken:
-                  type: string
       responses:
         '200':
           description: 포스트 ID & 간단한 정보
@@ -302,7 +321,7 @@ paths:
                 invalid_access_token:
                   value:
                     error: INVALID_ACCESS_TOKEN
-  /api/posts:
+  /api/post:
     post:
       summary: 글 작성
       tags:
@@ -314,8 +333,6 @@ paths:
             schema:
               type: object
               properties:
-                accessToken:
-                  type: string
                 title:
                   type: string
                 category:
@@ -355,15 +372,6 @@ paths:
           description: 신청할 글의 postId
           schema:
             type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                accessToken:
-                  type: string
       responses:
         '200':
           description: 신청 성공
@@ -402,8 +410,6 @@ paths:
             schema:
               type: object
               properties:
-                accessToken:
-                  type: string
                 userId:
                   type: string
       responses:
